objects/ASI_CRM_EVENTCapture__c.object
<CustomObject>
    <description>PRMYCRM 
Visitation Plan Detail &gt; QPVAP &gt; A &gt; Event / Activation</description>
    <fields>
        <fullName>ASI_CRM_MY_ActivationEndDate__c</fullName>
        <description>Activation End Date</description>
        <label>Activation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_ActivationEndTime__c</fullName>
        <description>Activation End Time</description>
        <label>Activation End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_ActivationStartDate__c</fullName>
        <description>Activation Start Date</description>
        <label>Activation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_ActivationStartTime__c</fullName>
        <label>Activation Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_BrandOther__c</fullName>
        <description>Sub-brand (Other)</description>
        <label>Sub-brand (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link Brand &gt; Sub-Brand &gt;Sku</description>
        <label>Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Event / Activation</relationshipLabel>
        <relationshipName>Activation_Event_Captures_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_InitiatedOutlet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiated by Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_MoreActivation__c</fullName>
        <description>How many more activation?</description>
        <label>How many more activation?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_NumberBAs__c</fullName>
        <description>Number of BAs present?</description>
        <label>Number of BAs present?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Outlet</description>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Activation_Event_Captures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_PRMorCompetitor__c</fullName>
        <description>Is PRM / Competitor Activity?</description>
        <label>Is PRM / Competitor Activity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRM Activity</fullName>
                </value>
                <value>
                    <fullName>Competitor Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_PromotionMechanics__c</fullName>
        <description>Promotion Mechanics</description>
        <label>Promotion Mechanics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Remarks__c</fullName>
        <description>Remarks</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_SeeSameEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you see same event in other outlet?</description>
        <label>Do you see same event in other outlet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Subbrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub-brand</description>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Event / Activation</relationshipLabel>
        <relationshipName>Event_Activation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_TypeActivation__c</fullName>
        <description>Type of Activation</description>
        <label>Type of Activation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Consumer Event</fullName>
                </value>
                <value>
                    <fullName>Trade Event</fullName>
                </value>
                <value>
                    <fullName>Merchandising</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_TypeOther__c</fullName>
        <description>Type of Activation (Other)</description>
        <label>Type of Activation (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_VisitationPlanDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Visitation Plan Detail</description>
        <label>Visitation Plan Detail</label>
        <referenceTo>ASI_HK_CRM_Visitation_Plan_Detail__c</referenceTo>
        <relationshipName>Activation_Event_Captures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_WhereActivation__c</fullName>
        <description>Where did you see it?</description>
        <label>Where did you see it?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event / Activation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event / Activation</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_EVENTCapture</fullName>
        <active>true</active>
        <description>ASI_CRM_MY_EVENTCapture</description>
        <label>ASI_CRM_MY_EVENTCapture</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>